@@ -1,5 +1,7 @@
 HEAD
-	+ Bugfix: Set monitor service as stopped on purpose to notify
+	+ Pass data-file for executing jobs
+	+ Added class for easier parsing of CSV files
+	+ Set monitor service as stopped on purpose to notify
 	  monitor stats to eBox Control Center
 	+ Set maximum number for eBox common name to 32
 	+ Bugfix: Found a lost method makes the monitorization work again
